removed redundant padding

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -188,6 +188,10 @@ body {
   align-items: center;
   padding: 40px 0;
 
+  @include mobile {
+    padding: 0;
+  }
+
   .cta-button {
     border-color: $red;
     background: $dark-grey;
